added image and text to page

--- a/src/features/common/sidebar/Sidebar.css
+++ b/src/features/common/sidebar/Sidebar.css
@@ -14,8 +14,8 @@
   top: 0;
   left: 0;
   box-shadow: 2px 0 1px #f1f1f1;
-  margin-left: 15px;
-}
+  /* margin-left: 15px;} */
+}  
 
 .x-sidebar {
   position: absolute;
@@ -48,11 +48,12 @@
 .sidebar-routes-links a {
   text-decoration: none;
   width: calc(100% - 24px);
-  padding: 15px 0 15px 15px;
+  padding: 15px 0 15px 35px;
   margin: 0 12px;
   font-size: 14px;
   font-weight: 800;
   color: var(--light-black);
+  /* color: #fff; */
 }
 
 #link_active {
@@ -80,6 +81,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  padding-left: 15px;
 }
 
 .media-links div a {
