--- a/src/features/cars/cardetails/CarDetails.css
+++ b/src/features/cars/cardetails/CarDetails.css
@@ -1,7 +1,23 @@
-h1 {
-  color: rgb(59, 163, 33);
+h4 {
+  color: rgb(151, 5, 34);
+  margin-left: 30%;
+  margin-top: -60px;
+  width: 100px;
 }
 
-h3 {
-  color: rgb(160, 10, 98);
+.carslist-cont {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  display: flex;
+}
+
+links {
+  color: black;
+}
+
+.book-btn {
+  margin-left: 30%;
+  margin-top: 24px;
+  padding: 5px;
 }
