--- a/src/features/cars/cardetails/CarDetails.css
+++ b/src/features/cars/cardetails/CarDetails.css
@@ -1,8 +1,10 @@
 h4 {
   color: rgb(151, 5, 34);
   margin-left: 30%;
-  margin-top: -60px;
-  width: 100px;
+  margin-top: -70px;
+  width: 150px;
+  font-size: larger;
+  font-weight: 900;
 }
 
 .carslist-cont {
@@ -14,6 +16,6 @@ h4 {
 
 .book-btn {
   margin-left: 30%;
-  margin-top: 24px;
+  margin-top: 5px;
   padding: 5px;
 }
