--- a/src/features/cars/carlist/Carousel.css
+++ b/src/features/cars/carlist/Carousel.css
@@ -32,6 +32,7 @@
 
 .slider-container {
   padding: 0 30px;
+  margin-left: 200px;
 }
 
 @media screen and (max-width: 550px) {
@@ -41,5 +42,10 @@
 
   .slider-control-centerleft button {
     padding: 0 1.25rem;
+  }
+
+  .slider-container {
+    margin-right: 100px;
+    margin-left: 120px;
   }
 }
