--- a/src/features/common/sidebar/Sidebar.module.css
+++ b/src/features/common/sidebar/Sidebar.module.css
@@ -4,13 +4,18 @@
 }
 
 .navbarContainer {
-  background-color: #fefefe;
+  background-color: #0e0d0d;
   border-right: 1px solid #f0f5f2;
 }
 
 .brandName {
   font-family: var(--pacifico);
   color: #000;
+  width: 10px;
+  height: 20px;
+  margin-top: -380px;
+  margin-left: -159px;
+  margin-bottom: ;
 }
 
 .mobileMenu {
@@ -36,4 +41,8 @@
   background-color: transparent;
   border: none;
   outline: none;
+}
+
+#menu {
+  margin-top: 100px;
 }
