--- a/src/features/cars/cardetails/CarDetails.module.css
+++ b/src/features/cars/cardetails/CarDetails.module.css
@@ -3,13 +3,14 @@
 .detailContainer {
   display: flex;
   flex-direction: column;
+
   /* margin-left: 120px; */
+
   /* width: 100vh;
   height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center; */
-  
 }
 
 /* .title {
@@ -36,8 +37,10 @@
 
 .priceColor {
   font-weight: 800;
+
   /* background-color: #ecf0f1; */
 }
+
 /*
 
 .car {
@@ -78,7 +81,7 @@
   align-items: center;
   justify-content: center;
   color: rgb(81, 192, 115);
-  border: 1px solid ;
+  border: 1px solid;
   margin-top: 10px;
   margin-left: 50%;
   width: 200px;
@@ -95,7 +98,7 @@
 }
 
 @-webkit-keyframes slide {
-  100% { left: 0 }
+  100% { left: 0; }
 }
 
 @keyframes slide {
@@ -125,6 +128,7 @@
   color: black;
   background-color: #caf149;
 }
+
 /*
 @media screen and (max-width: 768px) {
   .detailContainer {
