--- a/src/features/cars/carlist/CarCard.module.css
+++ b/src/features/cars/carlist/CarCard.module.css
@@ -37,7 +37,7 @@
   border-radius: 20px;
   padding: 0.4rem 0.75rem;
   margin-top: 1rem;
-  color: rgb(212, 83, 83);
+  color: rgba(2, 15, 17, 0.425);
   font-weight: 500;
 }
 
