--- a/src/features/cars/newcar/newCar.module.css
+++ b/src/features/cars/newcar/newCar.module.css
@@ -2,19 +2,20 @@
   display: flex;
   height: 100vh;
   margin-top: 0%;
+  margin-left: 240;
   background-image: url("http://1.bp.blogspot.com/-3QRsjl0wan4/Uk0X7hIP0eI/AAAAAAAAAHY/oE8w8r3oRvs/s1600/Super+sport+cars+wallpapers+2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 10%;
+  background-position: 100%;
 }
 
 .textctn {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  margin-bottom: 80%;
-  margin-left: -20%;
+  /* margin-bottom: 70%;
+  margin-left: -0%; */
+  margin-top: -900px;
 }
 
 .zindex {
@@ -22,6 +23,8 @@
 }
 
 .textctn .zindex {
+  display: flex;
+  justify-content: center;
   margin-left: 25%;
 }
 
@@ -76,7 +79,8 @@
 
 .form {
   display: flex;
-  margin-top: 2%;
+  justify-content: center;
+  margin-top: 48%;
 }
 
 @media screen and (max-width: 1250px) {
