--- a/src/features/cars/cardetails/CarDetails.module.css
+++ b/src/features/cars/cardetails/CarDetails.module.css
@@ -69,12 +69,12 @@
 
 .reservebtn {
   justify-items: center;
-  
 }
 
 .btncontainer {
   display: flex;
   justify-content: center;
+  text-decoration: none;
 }
 
 .btncontainer button {
