--- a/src/features/cars/newcar/newCar.module.css
+++ b/src/features/cars/newcar/newCar.module.css
@@ -93,10 +93,11 @@
   }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 550px) {
   .html {
     padding: 0;
     margin: 0;
+    overflow-y: hidden;
   }
 
   .input {
