one more change

--- a/src/features/cars/cardetails/CarDetails.module.css
+++ b/src/features/cars/cardetails/CarDetails.module.css
@@ -169,12 +169,9 @@
     padding: 0px;
   }
 
-  /* .btncontainer {
-    position: relative;
-    bottom: 0px;
-    right: 10px;
-    padding: 10px;
-  } */
+  .carModel {
+    margin: -25px 0;
+  }
 
   .carYear {
     justify-content: center;
