--- a/src/features/cars/newcar/newCar.module.css
+++ b/src/features/cars/newcar/newCar.module.css
@@ -2,7 +2,7 @@
   display: flex;
   height: 100vh;
   margin-top: 0%;
-  margin-left: 0px;
+  margin-left: 0;
   background-image: url("http://1.bp.blogspot.com/-3QRsjl0wan4/Uk0X7hIP0eI/AAAAAAAAAHY/oE8w8r3oRvs/s1600/Super+sport+cars+wallpapers+2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+
   /* margin-bottom: 70%;
   margin-left: -0%; */
   margin-top: -900px;
@@ -129,6 +130,7 @@
     justify-content: center;
     align-items: center;
     margin-top: -90px;
+
     /* margin-left: 320px; */
   }
 
@@ -137,6 +139,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
     /* margin-left: 250px; */
     width: 350px;
   }
