--- a/src/features/cars/carlist/Carslist.css
+++ b/src/features/cars/carlist/Carslist.css
@@ -48,7 +48,7 @@
   letter-spacing: 1.2px;
 }
 
-.brands-filter {
+/* .brands-filter {
   width: 35px;
   height: 35px;
   border: 1px var(--black-color) solid;
@@ -59,7 +59,7 @@
   font-size: 18px;
   cursor: pointer;
   color: var(--black-color);
-}
+} */
 
 .car-card {
   width: 100%;
