--- a/src/features/reservation/reserve/Reserve.module.css
+++ b/src/features/reservation/reserve/Reserve.module.css
@@ -56,6 +56,10 @@
   border-radius: 25px;
 }
 
+.backbtn {
+  color: black;
+}
+
 .btn:hover {
   background-color: var(--primary-green) !important;
   border-color: #fff !important;
