--- a/src/features/reservation/reserve/Reserve.module.css
+++ b/src/features/reservation/reserve/Reserve.module.css
@@ -38,7 +38,7 @@
   width: 200px;
   border-radius: 25px;
   background-color: var(--primary-green);
-  color: #fff;
+  color: #090c14;
   border-color: #fff;
 }
 
