--- a/src/features/cars/carlist/CarCard.module.css
+++ b/src/features/cars/carlist/CarCard.module.css
@@ -66,16 +66,18 @@ html {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    min-height: 400px;
+    min-width: 230px;
+    max-width: 230px;
+    min-height: 430px;
     margin-left: 0;
   }
 
   .carImg {
     min-height: 350px;
     max-height: 351px;
-    object-fit: cover;
-    min-width: 200px;
-    max-width: 200px;
+    object-fit: scale-down;
+    min-width: 230px;
+    max-width: 230px;
     border-radius: 20px;
   }
 }
