--- a/src/components/login/Login.module.css
+++ b/src/components/login/Login.module.css
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   justify-content: center;
+  position: relative;
   align-items: center;
   background-image: url('http://1.bp.blogspot.com/-3QRsjl0wan4/Uk0X7hIP0eI/AAAAAAAAAHY/oE8w8r3oRvs/s1600/Super+sport+cars+wallpapers+2.jpg');
   background-repeat: no-repeat;
@@ -9,17 +10,36 @@
   min-height: 100vh;
 }
 
+.fundo {
+  transition: ease-in;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(15, 14, 14);
+  opacity: 0.7;
+}
+
 .header {
-  margin-top: 100px;
+  font-weight: bolder;
+  margin-top: -240px;
   color: aliceblue;
+  /* z-index: 3; */
+  font-family: var(--pacifico);
+  font-size: 75px;
+  letter-spacing: 1px;
+  margin: 130px 0 100px;
 }
 
 .form {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   width: 350px;
 }
 
 .button {
-  margin-top: -70px;
+  margin-top: -100px;
   margin-left: 270px;
   color: blue;
   border-radius: 5px;
