--- a/src/components/register/Register.module.css
+++ b/src/components/register/Register.module.css
@@ -9,17 +9,36 @@
   min-height: 100vh;
 }
 
+.fundo {
+  transition: ease-in;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(15, 14, 14);
+  opacity: 0.7;
+}
+
 .header {
-  margin-top: 80px;
+  font-weight: bolder;
+  margin-top: -240px;
   color: aliceblue;
+  /* z-index: 3; */
+  font-family: var(--pacifico);
+  font-size: 75px;
+  letter-spacing: 1px;
+  margin: 130px 0 100px;
 }
 
 .form {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   width: 350px;
 }
 
 .button {
-  margin-top: -70px;
+  margin-top: 7770px;
   margin-left: 270px;
   color: blue;
   border-radius: 15px;
