--- a/src/components/splashScreen/Splash.module.css
+++ b/src/components/splashScreen/Splash.module.css
@@ -25,8 +25,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #ffb400;
-  opacity: 0.8;
+  background-color: rgb(15, 14, 14);
+  opacity: 0.7;
 }
 
 .header {
