--- a/src/components/login/Login.module.css
+++ b/src/components/login/Login.module.css
@@ -28,7 +28,7 @@
   font-family: var(--pacifico);
   font-size: 75px;
   letter-spacing: 1px;
-  margin: 130px 0 100px;
+  margin: 100px 100px;
 }
 
 .form {
